packages/next-swc/crates/core/tests/errors/next-dynamic/options-as-variable/output.stderr
error: next/dynamic options must be an object literal.
Read more: https://nextjs.org/docs/messages/invalid-dynamic-options-type
 --> input.js:4:43
  |
4 | const DynamicComponentWithCustomLoading = dynamic(
  |                                           ^^^^^^^

